--- a/src/index.html
+++ b/src/index.html
@@ -78,10 +78,11 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="/img/freatured image.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+              <h5>WEBSITE DESIGN</h5>
+              <p>
+                YOUR POWER TO MAKE GREAT SOFTWARE</p>
             </div>
           </div>
           <div class="carousel-item">
