index updated and added more

--- a/src/index.html
+++ b/src/index.html
@@ -123,7 +123,68 @@
     </p>
     <p style="font-size: 29px;">20+ years. 150+ software projects. 100+ companies.</p>
   </div>
-<!-- close -->
+  <!-- close -->
+
+  <!-- our works -->
+  <div class="background-black">
+
+
+    <div class="our-work" style="color: white;"> Our Most budget Projects</div>
+    <div class="block1">
+      <div class="card mb-3 col-6">
+        <img src="/img/concert.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title" style="font-size: 35px ;">Live Concert Audience Engagement Platform</h5>
+          <p class="card-text" style="font-size:23px;">A platform that connect audiences more deeply to the performers,
+            culture and history of
+            classical music during concert events with an engaging, yet completely unobtrusive app.
+            The founders of Octava, a composer and visual artist, knew exactly what was needed to bring live
+            performances
+            of classical music to life.
+            They wanted to build a software service that would provide audiences thoughtful commentary in real time
+            during
+            concerts.</p>
+          <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+        </div>
+      </div>
+      <div class="card mb-3 col-6">
+        <img src="/img/mvp.png" class="card-img-bottom" alt="...">
+        <div class="card-body">
+          <h5 class="card-title" style="font-size: 35px ;">MVP application for an innovative startup</h5>
+          <p class="card-text" style="font-size:23px;">b
+            We helped this startup build their minimum viable product (MVP) and launch to test user adoption and product
+            concept validation. JoyList is a unique product concept that merges ideas from Twitter, Yelp, and Facebook,
+            and others, to create a platform specifically designed to allow friends and family to exchange curated lists
+            of their favorite experiences.
+          </p>
+          <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+        </div>
+
+      </div>
+    </div>
+  </div>
+  <!-- close -->
+
+  <!-- we develop every type of soaftware -->
+  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/img/SOAFTWARE.png" class="d-block w-100" alt="...">
+      </div>
+    </div>
+  </div>
+  <!-- close -->
+
+  <!-- top soaftware company image  -->
+  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/img/award.png " class="d-block w-100" alt="...">
+      </div>
+
+    </div>
+  </div>
+  <!-- close -->
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
