--- a/src/index.html
+++ b/src/index.html
@@ -166,13 +166,13 @@
   <!-- close -->
 
   <!-- we develop every type of soaftware -->
-  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+  <!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="/img/SOAFTWARE.png" class="d-block w-100" alt="...">
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- close -->
 
   <!-- top soaftware company image  -->
@@ -185,6 +185,9 @@
     </div>
   </div>
   <!-- close -->
+
+
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
